--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ POSTGRES_USER=meal_planner_user
 POSTGRES_PASSWORD=your_secure_password
 POSTGRES_DB=meal_planner_db
 
+# Database URL for Prisma
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
+
 # Firebase Configuration
 FIREBASE_API_KEY=your_api_key
 FIREBASE_AUTH_DOMAIN=your_auth_domain
