--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,29 @@
 # Environment variables
 .env
+.env.*
+!.env.example
 
 # Dependencies
 node_modules/
 .pnp/
 .pnp.js
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # Testing
 coverage/
 
-# Production builds
-build/
-dist/
+# Next.js
 .next/
 out/
 
-# Flutter/Dart specific
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.packages
+# Production builds
 build/
-*.lock
-!/pubspec.lock
+dist/
+out/
 
 # IDE specific files
 .idea/
@@ -30,6 +31,7 @@ build/
 *.swp
 *.swo
 .DS_Store
+*.pem
 
 # Docker volumes
 local_data/*
@@ -40,6 +42,23 @@ local_data/*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# Local development
-*.local
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Vercel
+.vercel
+
+# Frontend specific
+frontend/node_modules/
+frontend/.env
+frontend/.env.*
+!frontend/.env.example
+frontend/coverage/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
