--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,20 @@ services:
     networks:
       - meal_planner_network
 
+  admin:
+    build:
+      context: ./admin
+      dockerfile: Dockerfile
+    container_name: meal_planner_admin
+    ports:
+      - "3000:3000"
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+    depends_on:
+      - postgres
+    networks:
+      - meal_planner_network
+
 networks:
   meal_planner_network:
     driver: bridge
