--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,23 @@ POSTGRES_DB=meal_planner_db
 # Database URL for Prisma
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
 
+# Database Configuration
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/meal_planner?schema=public"
+
+# API Configuration
+API_PORT=3000
+API_URL=http://localhost:3000
+
 # Firebase Configuration
 FIREBASE_API_KEY=your_api_key
-FIREBASE_AUTH_DOMAIN=your_auth_domain
+FIREBASE_APP_ID_ANDROID=your_android_app_id
+FIREBASE_APP_ID_IOS=your_ios_app_id
+FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 FIREBASE_PROJECT_ID=your_project_id
 FIREBASE_STORAGE_BUCKET=your_storage_bucket
-FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-FIREBASE_APP_ID=your_app_id
+FIREBASE_IOS_CLIENT_ID=your_ios_client_id
+FIREBASE_IOS_BUNDLE_ID=your_ios_bundle_id
+FIREBASE_ANDROID_PACKAGE_NAME=your_android_package_name
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
