--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   logger: ^2.0.2+1
   freezed_annotation: ^2.4.1
   uuid: ^4.2.2
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
