--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_svg: ^2.0.9
   
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.17.0
   logger: ^2.0.2+1
   freezed_annotation: ^2.4.1
   uuid: ^4.2.2
@@ -55,11 +55,14 @@ dev_dependencies:
   flutter_gen_runner: ^5.3.2
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.8
+  mocktail: ^1.0.3
+  riverpod_generator: ^2.3.9
 
 flutter:
   uses-material-design: true
   
   assets:
+    - .env
     - assets/images/
     - assets/icons/
     - assets/fonts/
@@ -67,12 +70,12 @@ flutter:
   fonts:
     - family: Inter
       fonts:
-        - asset: assets/fonts/Inter-Regular.ttf
-        - asset: assets/fonts/Inter-Medium.ttf
+        - asset: assets/fonts/Inter.ttf
+        - asset: assets/fonts/Inter.ttf
           weight: 500
-        - asset: assets/fonts/Inter-SemiBold.ttf
+        - asset: assets/fonts/Inter.ttf
           weight: 600
-        - asset: assets/fonts/Inter-Bold.ttf
+        - asset: assets/fonts/Inter.ttf
           weight: 700
 
 flutter_launcher_icons:
