--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -1,6 +1,10 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '12.0'
 
+# Set the encoding to UTF-8
+Encoding.default_external = Encoding::UTF_8
+Encoding.default_internal = Encoding::UTF_8
+
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -31,6 +35,7 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # Let CocoaPods handle the GoogleSignIn dependency through the Flutter plugin
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 
   target 'RunnerTests' do
@@ -44,6 +49,13 @@ post_install do |installer|
     
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      
+      # Enable modules for all targets
+      config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
+      config.build_settings['DEFINES_MODULE'] = 'YES'
+      
+      # Allow non-modular includes in framework modules
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
       
       # Fix for Apple Silicon
       if config.build_settings['PLATFORM_NAME'] == 'iphonesimulator'
