--- a/admin/package.json
+++ b/admin/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "15.1.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "node-fetch": "^2.7.0",
     "postcss": "^8",
     "supertest": "^7.0.0",
