--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,10 +1,10 @@
 name: meal_planner
-description: "A comprehensive meal planning mobile application"
+description: A meal planning application.
 publish_to: 'none'
 version: 0.1.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -18,13 +18,13 @@ dependencies:
   go_router: ^13.0.1
   
   # Network and API
-  dio: ^5.4.0
+  dio: ^5.7.0
   json_annotation: ^4.8.1
   
   # Authentication
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  google_sign_in: ^6.2.1
+  firebase_core: ^2.25.0
+  firebase_auth: ^4.16.0
+  google_sign_in: ^6.1.6
   sign_in_with_apple: ^5.0.0
   crypto: ^3.0.3
   
@@ -41,17 +41,19 @@ dependencies:
   flutter_svg: ^2.0.9
   
   # Utilities
-  intl: ^0.17.0
+  intl: ^0.19.0
   logger: ^2.0.2+1
   freezed_annotation: ^2.4.1
   uuid: ^4.2.2
   flutter_dotenv: ^5.1.0
+  cloud_firestore: ^4.14.0
+  retrofit: ^4.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
-  build_runner: ^2.4.7
+  flutter_lints: ^2.0.0
+  build_runner: ^2.4.14
   json_serializable: ^6.7.1
   freezed: ^2.4.6
   flutter_gen_runner: ^5.3.2
@@ -59,6 +61,7 @@ dev_dependencies:
   flutter_native_splash: ^2.3.8
   mocktail: ^1.0.3
   riverpod_generator: ^2.3.9
+  retrofit_generator: ^9.1.7
 
 flutter:
   uses-material-design: true
