fix: auth token handling and JWT verification
- Fix token handling in Flutter app:
  * Store complete 'Bearer token' in SharedPreferences
  * Use stored token directly in API requests
  * Add detailed logging for token flow
  * Fix UserModel to handle optional timestamps

- Fix JWT verification in Next.js API:
  * Remove dependency injection for JWT service
  * Use singleton jwtService directly in auth verification
  * Fix Authorization header case sensitivity
  * Add comprehensive debug logging

- Improve error handling:
  * Better error messages for auth failures
  * Proper handling of 401 responses
  * Automatic logout on auth errors

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,6 @@ JWT_REFRESH_TOKEN_EXPIRES_IN=7d
 JWT_ISSUER=meal_planner_api
 JWT_AUDIENCE=meal_planner_client
 JWT_ALGORITHM=HS256
+
+# Other Mobile Configuration
+DEBUG=true
