--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.5",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
