--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^9.0.0
   cupertino_icons: ^1.0.2
   # State Management
   flutter_riverpod: ^2.4.9
