--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^9.0.0
   cupertino_icons: ^1.0.2
   # State Management
   flutter_riverpod: ^2.4.9
@@ -48,6 +47,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   uuid: ^4.2.2
   flutter_dotenv: ^5.1.0
+  url_launcher: ^6.2.3
 
 dev_dependencies:
   flutter_test:
