--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.5",
+    "openai": "^4.80.1",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
